# mzIdentML-polars

./: .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT.md  LICENSE  Pipfile  README.md  build.rs  pyproject.toml  sync_polars.py  test_ambiguity.py  test_usage.py  xifdr_test.mzid
.github/workflows/: check.yml  pypi.yml
context/: mzIdentML1.3.0-release.txt  mzIdentML_Extension_XLink.txt  xifdr_test.mzid
cv/: PSI-MOD.obo  XLMOD.obo
python/mzidentml_polars/: __init__.py
src/: lib.rs  mzidentml.rs  polars_reader.rs  polars_writer.rs
tests/: README.md  conftest.py  test_cv.py  test_reader.py  test_validation.py  test_writer.py
