[package]
name = "mzidentml"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[lib]
name = "mzidentml_polars"
crate-type = ["cdylib", "rlib"]

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
pyo3 = { version = "0.25", features = ["extension-module"] }
pyo3-polars = { version = "0.24", features = ["serde"] }
xsd-parser = { version = "1.2.0", features = ["reqwest", "async", "update-expectations", "web-resolver", "tokio"] }
polars = { version = "0.51", features = ["lazy", "ndarray", "strings", ] }
rustyms = "0.7.0"
flate2 = "1.0"
