[package]
name = "mzidentml"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Falk B. Schimweg <f.schimweg@tu-berlin.de>", "Rappsilber Lab"]
description = "A fast Rust-based writer for mzIdentML 1.3 files using Polars"
repository = "https://github.com/Rappsilber-Laboratory/mzIdentML-polars"

[lib]
name = "_mzidentml_polars"
crate-type = ["cdylib", "rlib"]

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
pyo3 = { version = "*", features = ["extension-module"] }
pyo3-polars = { version = "*", features = ["serde", "derive", "lazy"] }
xsd-parser = { version = "1.2.0" }
polars = { version = ">=0.45", default-features = false, features = ["lazy", "ndarray", "strings", "dtype-full"] }
rustyms = "0.7.0"
flate2 = "1.0"
