[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mzidentml-polars"
version = "0.1.0"
description = "A fast Rust-based writer for mzIdentML 1.3 files using Polars"
license = {text = "AGPL-3.0"}
requires-python = ">=3.8"
dependencies = [
    "polars>=0.20.0"
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "mzidentml_polars"
