[build-system]
requires = [ "maturin>=1.0,<2.0", "setuptools-scm",]
build-backend = "maturin"

[project]
name = "mzidentml-polars"
dynamic = [ "version",]
description = "A fast Rust-based writer for mzIdentML 1.3 files using Polars"
readme = "README.md"
keywords = [ "proteomics", "mzIdentML", "polars", "crosslinking",]
requires-python = ">=3.8"
dependencies = [ "polars>=0.20.0,<1.32.0",]
[[project.authors]]
name = "Falk B. Schimweg"
email = "f.schimweg@tu-berlin.de"

[project.urls]
Homepage = "https://github.com/Rappsilber-Laboratory/mzIdentML-polars"
"Bug Tracker" = "https://github.com/Rappsilber-Laboratory/mzIdentML-polars/issues"

[project.license]
text = "AGPL-3.0"

[tool.maturin]
features = [ "pyo3/extension-module",]
module-name = "mzidentml_polars._mzidentml_polars"
python-source = "python"

[tool.setuptools_scm]
write_to = "python/mzidentml_polars/_version.py"
